# FastAPI-Feedback

./: .env  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  vercel.json
src/: config.py  main.py
src/api/v1/form/: router.py  schemas.py
src/services/: form.py
web/: index-old.html  index.html
web/static/css/: style.css
web/static/js/: main.js  validate.js
